// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton default renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  height: 2.85em;
  line-height: 2.85em;
  border-radius: 8px;
  font-weight: 600;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: #595C68;
  color: #fff;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
}

<a
  className="c0"
  href="/engineering/ux#example-list"
>
  Get Started
</a>
`;

exports[`LinkButton large renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  height: 2.85em;
  line-height: 2.85em;
  border-radius: 8px;
  font-weight: 600;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: #595C68;
  color: #fff;
  font-size: 1.35em;
  line-height: 2.825em;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
}

<a
  className="c0"
  href="/engineering/ux#example-list"
  large="true"
>
  Get Started
</a>
`;

exports[`LinkButton primary renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  height: 2.85em;
  line-height: 2.85em;
  border-radius: 8px;
  font-weight: 600;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: #595C68;
  color: #fff;
  background-color: #4bb2b6;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
}

.c0:hover {
  background-color: #6fc2c5;
  color: #fff;
}

.c0:active {
  background-color: #2d6c6e;
}

<a
  className="c0"
  href="/engineering/ux#example-list"
  primary="true"
>
  Get Started
</a>
`;

exports[`LinkButton small renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  height: 2.85em;
  line-height: 2.85em;
  border-radius: 8px;
  font-weight: 600;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: #595C68;
  color: #fff;
  font-size: 0.8em;
  line-height: 3em;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
}

<a
  className="c0"
  href="/engineering/ux#example-list"
  small="true"
>
  Get Started
</a>
`;
